--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="project.html" class="nav-item nav-link">Licence</a>
+                        <a href="brisklicence.html" class="nav-item nav-link">Licence</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -310,7 +310,7 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                                 <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
                                 <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
                                 <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
+                                <a class="btn btn-link ps-0" href="brisklicence.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
