--- a/briskcockroach.html
+++ b/briskcockroach.html
@@ -79,7 +79,7 @@
     <h1 class="display-7 w-70 mx-auto">‎ </h1>
     <h2 class="display-7 w-70 mx-auto">‎ </h2>
         <div align="center">
-        <img src="BriskSrcFolder/BriskImages/BriskCockroach.svg" alt="Brisk Pest Control" length="120", width="350">
+        <img src="scss/Briskockroachvid.gif" alt="Brisk Pest Control" length="120", width="350">
       </div>
     </div>
   </div>
