--- a/brisklicence.html
+++ b/brisklicence.html
@@ -89,8 +89,8 @@
                     </div>
                     <div class="team-icon d-flex flex-column">
                         <!-- Link to PDF File -->
-                        <a href="src/file1.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> Preview</a>
-                        <a href="src/file2.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> Download</a>
+                        <a href="src/file1.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                        <a href="src/file2.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
                     </div>
                 </div>
             </div>
