--- a/brisklicence.html
+++ b/brisklicence.html
@@ -79,54 +79,51 @@
             <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Team</h5>
             <h1 class="display-5 w-50 mx-auto">Our Team Members</h1>
         </div>
-        <div class="row g-5">
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                <div class="rounded team-item">
-                    <img src="img/team-1..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-                    <div class="team-content bg-primary text-dark text-center py-3">
-                        <span class="fs-4 fw-bold">Full Name</span>
-                        <p class="text-muted mb-0">Designation</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column">
-                        <!-- Link to PDF File -->
-                        <a href="src/file1.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
-                        <a href="src/file2.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
-                    </div>
-                </div>
+       <div class="row g-5">
+    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+        <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
+            <img src="img/team-1..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+            <div class="team-content bg-primary text-dark text-center py-3">
+                <span class="fs-4 fw-bold">UDYAM</span>
+                <p class="text-muted mb-0">Certificate</p>
             </div>
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                <div class="rounded team-item">
-                    <img src="img/team-2.jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-                    <div class="team-content bg-primary text-dark text-center py-3">
-                        <span class="fs-4 fw-bold">Full Name</span>
-                        <p class="text-muted mb-0">Designation</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column">
-                        <a href="#" class="btn btn-primary border-0 mb-2"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="btn btn-primary border-0 mb-2"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="btn btn-primary border-0 mb-2"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="btn btn-primary border-0"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
+            <div class="team-icon d-flex flex-column align-items-center">
+                <!-- Link to PDF File -->
+                <a href="img/BRISKPESTUDYAM.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                <a href="img/BRISKPESTUDYAM.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
             </div>
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                <div class="rounded team-item">
-                    <img src="img/team-3.jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-                    <div class="team-content bg-primary text-dark text-center py-3">
-                        <span class="fs-4 fw-bold">Full Name</span>
-                        <p class="text-muted mb-0">Designation</p>
-                    </div>
-                    <div class="team-icon d-flex flex-column">
-                        <a href="#" class="btn btn-primary border-0 mb-2"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="btn btn-primary border-0 mb-2"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="btn btn-primary border-0 mb-2"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="btn btn-primary border-0"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
+        </div>
+    </div>
+    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+        <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
+            <img src="img/team-2..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+            <div class="team-content bg-primary text-dark text-center py-3">
+                <span class="fs-4 fw-bold">GST</span>
+                <p class="text-muted mb-0">Certificate</p>
+            </div>
+            <div class="team-icon d-flex flex-column align-items-center">
+                <!-- Link to PDF File -->
+                <a href="img/BriskGST.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                <a href="img/BriskGST.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+        <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
+            <img src="img/team-3..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+            <div class="team-content bg-primary text-dark text-center py-3">
+                <span class="fs-4 fw-bold">PEST SERVICE</span>
+                <p class="text-muted mb-0">Certificate</p>
+            </div>
+            <div class="team-icon d-flex flex-column align-items-center">
+                <!-- Link to PDF File -->
+                <a href="img/BRISKPEST.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                <a href="img/BRISKPEST.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
             </div>
         </div>
     </div>
 </div>
+
 <!-- Licence End -->
 
     <!-- Footer Start -->
