--- a/brisklicence.html
+++ b/brisklicence.html
@@ -82,7 +82,7 @@
        <div class="row g-5">
     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
         <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-            <img src="img/team-1..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+            <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
             <div class="team-content bg-primary text-dark text-center py-3">
                 <span class="fs-4 fw-bold">UDYAM</span>
                 <p class="text-muted mb-0">Certificate</p>
@@ -96,7 +96,7 @@
     </div>
     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
         <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-            <img src="img/team-2..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+            <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
             <div class="team-content bg-primary text-dark text-center py-3">
                 <span class="fs-4 fw-bold">GST</span>
                 <p class="text-muted mb-0">Certificate</p>
@@ -110,7 +110,7 @@
     </div>
     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
         <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-            <img src="img/team-3..jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+            <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
             <div class="team-content bg-primary text-dark text-center py-3">
                 <span class="fs-4 fw-bold">PEST SERVICE</span>
                 <p class="text-muted mb-0">Certificate</p>
