--- a/brisklicence.html
+++ b/brisklicence.html
@@ -83,7 +83,7 @@
     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
         <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
             <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-            <div class="team-content bg-primary text-dark text-center py-3">
+            <div class="team-content bg-black text-yellow text-center py-3">
                 <span class="fs-4 fw-bold">UDYAM</span>
                 <p class="text-muted mb-0">Certificate</p>
             </div>
@@ -97,7 +97,7 @@
     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
         <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
             <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-            <div class="team-content bg-primary text-dark text-center py-3">
+            <div class="team-content bg-black text-yellow text-center py-3">
                 <span class="fs-4 fw-bold">GST</span>
                 <p class="text-muted mb-0">Certificate</p>
             </div>
@@ -111,7 +111,7 @@
     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
         <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
             <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-            <div class="team-content bg-primary text-dark text-center py-3">
+            <div class="team-content bg-black text-yellow text-center py-3">
                 <span class="fs-4 fw-bold">PEST SERVICE</span>
                 <p class="text-muted mb-0">Certificate</p>
             </div>
