--- a/brisklicence.html
+++ b/brisklicence.html
@@ -80,52 +80,49 @@
             <h1 class="display-5 w-50 mx-auto">Our Team Members</h1>
         </div>
        <div class="row g-5">
-    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-        <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-            <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-            <div class="team-content bg-black text-yellow text-center py-3">
-                <span class="fs-4 fw-bold">UDYAM</span>
-                <p class="text-muted mb-0">Certificate</p>
+            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+                <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
+                    <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                    <div class="team-content bg-black text-yellow text-center py-3"> <!-- Modified styling here -->
+                        <span class="fs-4 fw-bold">UDYAM Certificate</span> <!-- Text changed here -->
+                    </div>
+                    <div class="team-icon d-flex flex-column align-items-center">
+                        <!-- Link to PDF File -->
+                        <a href="img/BRISKPESTUDYAM.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                        <a href="img/BRISKPESTUDYAM.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
+                    </div>
+                </div>
             </div>
-            <div class="team-icon d-flex flex-column align-items-center">
-                <!-- Link to PDF File -->
-                <a href="img/BRISKPESTUDYAM.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
-                <a href="img/BRISKPESTUDYAM.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
+            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+                <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
+                    <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                    <div class="team-content bg-black text-yellow text-center py-3"> <!-- Modified styling here -->
+                        <span class="fs-4 fw-bold">GST Certificate</span> <!-- Text changed here -->
+                    </div>
+                    <div class="team-icon d-flex flex-column align-items-center">
+                        <!-- Link to PDF File -->
+                        <a href="img/BriskGST.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                        <a href="img/BriskGST.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-        <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-            <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-            <div class="team-content bg-black text-yellow text-center py-3">
-                <span class="fs-4 fw-bold">GST</span>
-                <p class="text-muted mb-0">Certificate</p>
-            </div>
-            <div class="team-icon d-flex flex-column align-items-center">
-                <!-- Link to PDF File -->
-                <a href="img/BriskGST.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
-                <a href="img/BriskGST.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
-            </div>
-        </div>
-    </div>
-    <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-        <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-            <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-            <div class="team-content bg-black text-yellow text-center py-3">
-                <span class="fs-4 fw-bold">PEST SERVICE</span>
-                <p class="text-muted mb-0">Certificate</p>
-            </div>
-            <div class="team-icon d-flex flex-column align-items-center">
-                <!-- Link to PDF File -->
-                <a href="img/BRISKPEST.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
-                <a href="img/BRISKPEST.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
+            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+                <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
+                    <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                    <div class="team-content bg-black text-yellow text-center py-3"> <!-- Modified styling here -->
+                        <span class="fs-4 fw-bold">PEST SERVICE Certificate</span> <!-- Text changed here -->
+                    </div>
+                    <div class="team-icon d-flex flex-column align-items-center">
+                        <!-- Link to PDF File -->
+                        <a href="img/BRISKPEST.pdf" class="btn btn-primary border-0 mb-2"><i class="far fa-eye"></i> </a>
+                        <a href="img/BRISKPEST.pdf" class="btn btn-primary border-0"><i class="fas fa-download"></i> </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
 <!-- Licence End -->
-
     <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
