--- a/brisklicence.html
+++ b/brisklicence.html
@@ -71,20 +71,19 @@
         </div>
     </div>
     <!-- Navbar End -->
-
-   <!-- Licence Start -->
+<!-- Licence Start -->
 <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
             <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Team</h5>
             <h1 class="display-5 w-50 mx-auto">Our Team Members</h1>
         </div>
-       <div class="row g-5">
+        <div class="row g-5">
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                 <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
                     <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-                    <div class="team-content bg-black text-yellow text-center py-3"> <!-- Modified styling here -->
-                        <span class="fs-4 fw-bold">UDYAM Certificate</span> <!-- Text changed here -->
+                    <div class="team-content bg-primary text-dark text-center py-3">
+                        <!-- Removed text -->
                     </div>
                     <div class="team-icon d-flex flex-column align-items-center">
                         <!-- Link to PDF File -->
@@ -96,8 +95,8 @@
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                 <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
                     <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-                    <div class="team-content bg-black text-yellow text-center py-3"> <!-- Modified styling here -->
-                        <span class="fs-4 fw-bold">GST Certificate</span> <!-- Text changed here -->
+                    <div class="team-content bg-primary text-dark text-center py-3">
+                        <!-- Removed text -->
                     </div>
                     <div class="team-icon d-flex flex-column align-items-center">
                         <!-- Link to PDF File -->
@@ -109,8 +108,8 @@
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                 <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
                     <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
-                    <div class="team-content bg-black text-yellow text-center py-3"> <!-- Modified styling here -->
-                        <span class="fs-4 fw-bold">PEST SERVICE Certificate</span> <!-- Text changed here -->
+                    <div class="team-content bg-primary text-dark text-center py-3">
+                        <!-- Removed text -->
                     </div>
                     <div class="team-icon d-flex flex-column align-items-center">
                         <!-- Link to PDF File -->
@@ -123,6 +122,7 @@
     </div>
 </div>
 <!-- Licence End -->
+
     <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
