--- a/brisklicence.html
+++ b/brisklicence.html
@@ -81,7 +81,7 @@
         <div class="row g-5">
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                 <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-                    <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                    <img src="BriskOthSrc/UDYAMCERTIFICATE.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
                     <div class="team-content bg-primary text-dark text-center py-3">
                         <!-- Removed text -->
                     </div>
