--- a/brisklicence.html
+++ b/brisklicence.html
@@ -75,8 +75,8 @@
 <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-            <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Team</h5>
-            <h1 class="display-5 w-50 mx-auto">Our Team Members</h1>
+            <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Certifications</h5>
+            <h1 class="display-5 w-50 mx-auto">ㅤ</h1>
         </div>
         <div class="row g-5">
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
@@ -94,7 +94,7 @@
             </div>
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                 <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-                    <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                    <img src="BriskOthSrc/GSTCERTIFICATE.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
                     <div class="team-content bg-primary text-dark text-center py-3">
                         <!-- Removed text -->
                     </div>
@@ -107,7 +107,7 @@
             </div>
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                 <div class="rounded team-item d-flex flex-column justify-content-center align-items-center">
-                    <img src="img/brisklogo.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                    <img src="BriskOthSrc/PESTCERTIFICATE.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
                     <div class="team-content bg-primary text-dark text-center py-3">
                         <!-- Removed text -->
                     </div>
